Fixed encoding handling in ICQ authorization messages. This is already fixed in trunk, so this change can be considered to be simplified backport of encoding fix.

BUG: 145240

svn path=/branches/KDE/3.5/kdenetwork/kopete/; revision=663090